--- a/gp-crawl.ipynb
+++ b/gp-crawl.ipynb
@@ -2190,7 +2190,7 @@
     "from bs4 import BeautifulSoup\n",
     "import pymongo\n",
     "import time\n",
-    "tdb_path = 'mongodb://read_write:klg2goklg2go@120.77.250.86:3717/?authSource=admin'\n",
+    "tdb_path = ''\n",
     "tdb = pymongo.MongoClient(tdb_path)['model_train']\n",
     "url_head = 'https://apkcombo.com/'\n",
     "for i in range(1000):\n",
