--- a/ML0101EN-Clus-DBSCN-weather-py-v1.ipynb
+++ b/ML0101EN-Clus-DBSCN-weather-py-v1.ipynb
@@ -857,9 +857,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -871,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   },
   "widgets": {
    "state": {},
