--- a/ML0101EN-Clus-K-Means-Customer-Seg-py-v1.ipynb
+++ b/ML0101EN-Clus-K-Means-Customer-Seg-py-v1.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -20,7 +19,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -73,7 +71,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -90,7 +87,6 @@
    "execution_count": 2,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -110,7 +106,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -125,7 +120,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -140,7 +134,6 @@
    "execution_count": 4,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -155,7 +148,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -187,7 +179,6 @@
    "execution_count": 5,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -202,7 +193,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -217,8 +207,6 @@
    "execution_count": 6,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -259,7 +247,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -274,7 +261,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -302,7 +288,6 @@
    "execution_count": 7,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -317,7 +302,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -332,8 +316,6 @@
    "execution_count": 8,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -364,7 +346,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -379,8 +360,6 @@
    "execution_count": 9,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -410,7 +389,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -425,7 +403,6 @@
    "execution_count": 10,
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -455,7 +432,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -470,7 +446,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -485,8 +460,6 @@
    "execution_count": 11,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -641,7 +614,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -661,8 +633,6 @@
    "execution_count": 6,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -698,7 +668,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -714,8 +683,6 @@
    "execution_count": 7,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -866,7 +833,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -881,8 +847,6 @@
    "execution_count": 17,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -921,7 +885,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -937,8 +900,6 @@
    "execution_count": 19,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -991,7 +952,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1008,8 +968,6 @@
    "execution_count": 20,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1061,7 +1019,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1077,8 +1034,6 @@
    "execution_count": 21,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1221,7 +1176,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1236,8 +1190,6 @@
    "execution_count": 25,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1367,8 +1319,6 @@
    "execution_count": 23,
    "metadata": {
     "button": false,
-    "collapsed": false,
-    "deletable": true,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1449,7 +1399,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1469,7 +1418,6 @@
    "cell_type": "markdown",
    "metadata": {
     "button": false,
-    "deletable": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1495,9 +1443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1509,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   },
   "widgets": {
    "state": {},
