add Silhouette Value explaination

--- a/KMEANS/Clus-K-Means-images.ipynb
+++ b/KMEANS/Clus-K-Means-images.ipynb
@@ -184,6 +184,7 @@
     "        sc_score = silhouette_score(X, kmeans.labels_, metric='euclidean')\n",
     "        sc_scores.append(sc_score)\n",
     "        score_indexes.append({'s':sc_score,'k':t})\n",
+    "    #np.argmax 返回list 最大的第一个元素的index    \n",
     "    best_k = score_indexes[np.argmax(sc_scores)]['k']\n",
     "    print('best k',best_k )\n",
     "    return best_k, sc_scores\n",
